// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption on Android renders an image with a caption 1`] = `
<View>
  <./image
    aspectRatio={1.7777777777777777}
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7d2fd06c-a460-11e7-8955-1ad2a9a7928d.jpg?crop=1500%2C844%2C0%2C78&resize=685"
  />
  <View
    style={
      Array [
        Object {
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          Object {
            "color": "#333333",
            "fontSize": 9,
            "fontWeight": "400",
            "letterSpacing": 1,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with credits 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          Object {
            "color": "#333333",
            "fontSize": 9,
            "fontWeight": "400",
            "letterSpacing": 1,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with credits only 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          Object {
            "color": "#333333",
            "fontSize": 9,
            "fontWeight": "400",
            "letterSpacing": 1,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with specific styles 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 10,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          Object {
            "color": "green",
          },
        ]
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          Object {
            "color": "#333333",
            "fontSize": 9,
            "fontWeight": "400",
            "letterSpacing": 1,
            "lineHeight": 16,
          },
          Object {
            "color": "green",
          },
        ]
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly without credits 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 16,
          },
          undefined,
        ]
      }
    >
      Some caption text goes in here
    </Text>
  </View>
</View>
`;
